--- a/AssetScan/Overview.xib
+++ b/AssetScan/Overview.xib
@@ -11,6 +11,11 @@
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bFE-cZ-dC1">
+                    <rect key="frame" x="0.0" y="0.0" width="600" height="46"/>
+                    <animations/>
+                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.59999999999999998" colorSpace="calibratedRGB"/>
+                </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tw9-On-N1J">
                     <rect key="frame" x="8" y="20" width="584" height="21"/>
                     <animations/>
@@ -18,9 +23,9 @@
                         <constraint firstAttribute="height" constant="21" id="BHm-ye-uEg"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
-                    <color key="shadowColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="shadowColor" red="1" green="1" blue="1" alpha="0.59999999999999998" colorSpace="calibratedRGB"/>
                     <size key="shadowOffset" width="1" height="2"/>
                 </label>
                 <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="BZN-7x-5xy">
@@ -85,6 +90,7 @@
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6VW-id-bBv">
                     <rect key="frame" x="512" y="49" width="80" height="32"/>
                     <animations/>
+                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.59999999999999998" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="32" id="OVe-aP-oH9"/>
                         <constraint firstAttribute="width" constant="80" id="wHO-Vn-Xzk"/>
@@ -98,13 +104,17 @@
             <animations/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
+                <constraint firstItem="bFE-cZ-dC1" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="5L7-CJ-YLa"/>
                 <constraint firstItem="Tw9-On-N1J" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="5Zt-No-k82"/>
+                <constraint firstItem="bFE-cZ-dC1" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="6T2-n7-c2n"/>
                 <constraint firstItem="6VW-id-bBv" firstAttribute="top" secondItem="Tw9-On-N1J" secondAttribute="bottom" constant="8" id="82E-Sz-D1M"/>
                 <constraint firstItem="hin-iv-E0h" firstAttribute="leading" secondItem="T0W-9F-Ijk" secondAttribute="trailing" constant="8" id="JM3-AH-e9d"/>
                 <constraint firstItem="BZN-7x-5xy" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="KAN-3B-dqf"/>
                 <constraint firstAttribute="bottom" secondItem="BZN-7x-5xy" secondAttribute="bottom" constant="8" id="LPw-nm-Sxr"/>
                 <constraint firstItem="MQp-x7-fk5" firstAttribute="leading" secondItem="BZN-7x-5xy" secondAttribute="trailing" constant="8" id="M5Z-2J-DKG"/>
                 <constraint firstAttribute="bottom" secondItem="hdM-dE-xo4" secondAttribute="bottom" id="RKu-Zb-tD1"/>
+                <constraint firstAttribute="trailing" secondItem="bFE-cZ-dC1" secondAttribute="trailing" id="S8u-bt-0BU"/>
+                <constraint firstItem="6VW-id-bBv" firstAttribute="top" secondItem="bFE-cZ-dC1" secondAttribute="bottom" constant="3" id="Vld-5L-0fN"/>
                 <constraint firstAttribute="bottom" secondItem="hin-iv-E0h" secondAttribute="bottom" constant="8" id="d2U-Rp-rwS"/>
                 <constraint firstItem="hin-iv-E0h" firstAttribute="centerY" secondItem="T0W-9F-Ijk" secondAttribute="centerY" id="fxU-0i-IGR"/>
                 <constraint firstItem="MQp-x7-fk5" firstAttribute="centerY" secondItem="BZN-7x-5xy" secondAttribute="centerY" id="iR7-Ep-H14"/>
